// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Slide renders with additional delay factor on slide animation 1`] = `
.c0 {
  position: relative;
}

.c0::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: #fff;
  -webkit-transform: scale3d(0,1,1);
  -ms-transform: scale3d(0,1,1);
  transform: scale3d(0,1,1);
  -webkit-animation: hDiCPJ 1s 1s ease-in-out forwards;
  animation: hDiCPJ 1s 1s ease-in-out forwards;
}

.c0 > span {
  display: inherit;
  visibility: hidden;
  -webkit-animation: cwLUPY 0.5s 1.5s ease-out forwards;
  animation: cwLUPY 0.5s 1.5s ease-out forwards;
}

<div
  class="c0"
>
  <span>
    hello world!
  </span>
</div>
`;

exports[`components/Slide renders with background css style set to passed in backgroundColor 1`] = `
.c0 {
  position: relative;
}

.c0::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: #fff;
  -webkit-transform: scale3d(0,1,1);
  -ms-transform: scale3d(0,1,1);
  transform: scale3d(0,1,1);
  -webkit-animation: hDiCPJ 1s 0.5s ease-in-out forwards;
  animation: hDiCPJ 1s 0.5s ease-in-out forwards;
}

.c0 > span {
  display: inherit;
  visibility: hidden;
  -webkit-animation: cwLUPY 0.5s 1s ease-out forwards;
  animation: cwLUPY 0.5s 1s ease-out forwards;
}

<div
  class="c0"
>
  <span>
    hello world!
  </span>
</div>
`;
